--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.rushi</groupId>
 	<artifactId>student-reg-webapp</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0</version>
 	<packaging>war</packaging>
 	<properties>
 		<java.version>11</java.version>
@@ -24,11 +24,11 @@
     <distributionManagement>
 		<repository>
 			<id>nexus</id>
-			<url>http://51.21.195.227:8081/repository/student-webapp/</url>
+			<url>http://13.53.134.190:8081/repository/Student-Project/</url>
 		</repository>
 		<snapshotRepository>
 			<id>nexus</id>
-			<url>http://51.21.195.227:8081/repository/student-webapp-snapshot/</url>
+			<url>http://13.53.134.190:8081/repository/Student-Project-Snapshot/</url>
 		</snapshotRepository>
     </distributionManagement>
 
